tests/ui/not_send_auto_trait2.stderr
error[E0277]: the trait bound `PyAny: Ungil` is not satisfied in `[closure@$DIR/tests/ui/not_send_auto_trait2.rs:8:26: 8:28]`
   --> tests/ui/not_send_auto_trait2.rs:8:26
    |
8   |           py.allow_threads(|| {
    |              ------------- ^-
    |              |             |
    |  ____________|_____________within this `[closure@$DIR/tests/ui/not_send_auto_trait2.rs:8:26: 8:28]`
    | |            |
    | |            required by a bound introduced by this call
9   | |             println!("{:?}", string);
10  | |         });
    | |_________^ within `[closure@$DIR/tests/ui/not_send_auto_trait2.rs:8:26: 8:28]`, the trait `Ungil` is not implemented for `PyAny`
    |
    = note: required because it appears within the type `PyString`
    = note: required because it appears within the type `&PyString`
    = note: required because it appears within the type `&&PyString`
note: required because it's used within this closure
   --> tests/ui/not_send_auto_trait2.rs:8:26
    |
8   |         py.allow_threads(|| {
    |                          ^^
note: required by a bound in `pyo3::Python::<'py>::allow_threads`
   --> src/marker.rs
    |
    |         F: Ungil + FnOnce() -> T,
    |            ^^^^^ required by this bound in `pyo3::Python::<'py>::allow_threads`
